Make the nav in the header fixed so it is always visible when scrolling

--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,6 @@ h3 {
 }
 
 header {
-    position: sticky;
-    top: 0;
-    z-index: 1;
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -40,6 +37,14 @@ header h1,
 }
 
 .page-nav {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+    background: #2b2b2b;
+    background:rgba(43, 43, 43, 0.8);
+    border-radius: 5px;
+    padding:15px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -236,7 +241,7 @@ header h1,
 /* PORTFOLIO PAGE */
 
 #portfolio-section {
-    height: 90vh;
+    height: 100vh;
     padding: 0px;
 }
 
@@ -314,7 +319,7 @@ header h1,
 
 /* CONTACT PAGE */
 #contact-section {
-    height: 90vh;
+    height: 100vh;
 }
 
 .contact-page {
@@ -324,34 +329,30 @@ header h1,
 
 }
 
-
-
 .contact-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-start;
-    gap:30px;
+    gap:10px;
     color: rgb(148, 148, 148);
     border: 4px, dashed, rgb(255, 217, 0);
     font-size: 23px;
-    padding: 100px;
+    padding:50px;
     background-image:
         linear-gradient(90deg, rgb(43, 43, 43) 50%, transparent 100%),
         linear-gradient(90deg, rgba(43, 43, 43) 40%, transparent),
         url('images/bogota.jpg');
-    /*  -webkit-filter: grayscale(100%);
-    filter: grayscale(100%); */
     background-repeat: no-repeat;
     background-size: 100%;
     height: 700px;
     width: 60%;
-    box-shadow: inset 0 0 10px #000000;
-    overflow-y: auto;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
+
 }
 
+.yellow-text{
+    color: rgb(255, 217, 0);
+}
 .page-links .fa{
     color:  rgb(255, 217, 0);
     font-size:48px;
@@ -387,6 +388,5 @@ header h1,
 }
 
 section {
-    scroll-margin-top: 100px;
-    /* Adjust this to the height of your sticky header */
+    /* scroll-margin-top: 100px; */
 }
